@@ -1020,6 +1020,8 @@ code {
 
 <p><strong>default.pause</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Pause Game".</p>
 
+<p><strong>default.cycle_menus</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Cycle Menus".</p>
+
 <p><strong>default.aim_up</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Aim Up".</p>
 
 <p><strong>default.aim_down</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Aim Down".</p>
